--- a/ci-operator/step-registry/stackrox/automation-flavors/ocp-4-e2e/stackrox-automation-flavors-ocp-4-e2e-workflow.yaml
+++ b/ci-operator/step-registry/stackrox/automation-flavors/ocp-4-e2e/stackrox-automation-flavors-ocp-4-e2e-workflow.yaml
@@ -6,11 +6,11 @@ workflow:
     - as: ocp-4-create
       commands: |
         echo "Running openshift-4 ${OCP_VERSION} automation"
+        # TODO: remove this after ocp-4 flavor image is updated.
         echo "Temporary workaround for ocp4.16 installer on gcp:"
         echo '+ cp /tmp/vault/stackrox-automation-flavors/OCP_4_GCP_SA ~/.gcp/osServiceAccount.json'
         mkdir -p ~/.gcp || true; cp /tmp/vault/stackrox-automation-flavors/OCP_4_GCP_SA ~/.gcp/osServiceAccount.json || true
         /usr/bin/openshift-ci.sh create openshift-4 "${OCP_VERSION}"
-        oc create clusterrolebinding system:openshift:scc:restricted --clusterrole=system:openshift:scc:restricted --group=system:authenticated || true
       credentials:
       - mount_path: /tmp/vault/stackrox-automation-flavors
         name: stackrox-automation-flavors
